# rps-tauri

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: App.tsx  style.css
src-tauri/: .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/src/: game.rs  main.rs  rps.rs
src-tauri/src/rps/: aoc.rs  game.rs  scoreboard.rs
